# OpenJuris-Scraper

./: .gitignore  main.py  pyproject.toml
src/: exceptions.py  main.py
src/api/: api.py  dependencies.py
src/api-deprecated/: api.py
src/api-deprecated/routers/: document.py  scraper.py  source.py
src/api-deprecated/schemas/: document.py  embedding.py  scraper.py
src/api/middleware/: rate_limit.py
src/api/routers/: __init__.py  document.py  document_flags.py  download.py  embedding.py  export.py  public.py  scraper.py  statistics.py  vector.py
src/api/schemas/: document.py  document_flags.py  embedding.py  scraper.py  source.py  statistics.py  vector.py
src/config/: __init__.py  database.py  embedder.py  scraper.py
src/converters/: document_builder.py  markdown_transformer.py
src/crawler/elibrary/: constants.py  elibrary.py
src/embedder/: embedder.py  factory.py  text_chunker.py
src/enums/: app_environment.py  document_category.py  document_type.py  embedding_model.py  embedding_provider.py  issue_type.py  relation_type.py  scraper_status.py  section_type.py  source_name.py  source_type.py  source_url.py
src/models/: directory.py  document.py  document_flags.py  document_part.py  document_relation.py  documents.py  scrape_job.py  source.py  statistics.py  subject.py  subject_link.py  vector.py
src/models/types/: vector.py
src/schemas/: date_range.py  scraped_document.py  scraped_part.py  scraper_context.py  statute_pattern.py  text_chunk.py
src/scrapers/: base.py  factory.py
src/services/: embed.py  export.py  scraper.py  subject.py
src/storage/: database.py  file_system.py  seed.py
src/transformers/: html_to_markdown.py  markdown_transformer.py
src/utils/: cleaner.py  constants.py  http_client.py  https.py  tokens.py
(+19 files in other folders)
