[project]
name = "openjuris-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.129.0",
    "pydantic-settings>=2.13.0",
    "ruff>=0.15.1",
    "sqlalchemy-libsql>=0.2.0",
    "sqlmodel>=0.0.34",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
